--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-six==1.0.5
 entrypoints==0.4
 excel-base==1.0.4
 executing==0.10.0
+gunicorn==20.1.0
 ipykernel==6.15.1
 ipython==8.4.0
 isoweek==1.3.3
